--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <!-- Esté é um Comentário em HTML. -->
 <!DOCTYPE HTML> <!-- Esté e o DTD do HTML5. -->
+
+<html> 
+	<!-- Primeiro Filho do HTML = HEAD. -->
+	<head>
+		<!-- Os Filhos do head são em sua maoria tags de metadados. EX: meta.  -->
+		<meta charset="Utf-8"/>
+		<meta name="viewport" content="width:device-width,initial-scale=1.0"/>
+		<title>treino </title>
+	</head>
+	<!--segundo filho do html -->
+	<body>
+		<h1>Exemplo de conteúdo estatico </h1>
+		<p> Eu sou um Paragrafo. </p>
+	</body>
+</html>
