Orientação sobre tags de bloco e linha

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 		<meta charset="Utf-8"/>
 		<meta name="viewport" content="width:device-width,initial-scale=1.0"/>
 		<title>treino </title>
+		<link rel="stylesheet" href="main.css">
 	</head>
 	<!--segundo filho do html -->
 	<body>
-		<h1>Exemplo de conteúdo estatico </h1>
-		<p> Eu sou um Paragrafo.</p>
+		<h1>Exemplo de conteúdo estatico</h1>
+		<p style="border: solid 2px #00ff00;"> Eu sou um Paragrafo.</p>
+		<span id="span1"> Eu Sou um Elemento de linha</span>
+		<span id="span2"> Eu Sou outro Elemento de linha</span>
 	</body>
 </html>
