Estrutura do Cabeçario criado

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 	</head>
 	<!--segundo filho do html -->
 	<body>
-		<h1>Exemplo de conteúdo estatico</h1>
-		<p style="border: solid 2px #00ff00;"> Eu sou um Paragrafo.</p>
-		<span id="span1"> Eu Sou um Elemento de linha</span>
-		<span id="span2"> Eu Sou outro Elemento de linha</span>
+		
+		<div class="conteiner">
+			<header class="cabecalho">
+				<h1>Minha Página</h1>	
+				<nav>
+						<ul>
+							<li>home</li>
+							<li>sobre nos</li>
+							<li>Contato</li>
+						</ul>
+					</nav>
+			</header>
+		</div>
+
 	</body>
 </html>
