--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- Os Filhos do head são em sua maoria tags de metadados. EX: meta.  -->
 		<meta charset="Utf-8"/>
 		<meta name="viewport" content="width:device-width,initial-scale=1.0"/>
-		<title>treino </title>
+		<title>treino</title>
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<!--segundo filho do html -->
@@ -17,10 +17,10 @@
 			<header class="cabecalho">
 				<h1>Minha Página</h1>	
 				<nav>
-						<ul>
-							<li>home</li>
-							<li>sobre nos</li>
-							<li>Contato</li>
+						<ul class="links">
+							<li><a href="https://www.fiap.com.br/" target="_blank">fiap</a></li>
+							<li><a href="https://google.com" target="_blank">Google</a></li>
+							<li><a href="https://github.com/RichardyBS" target="_blank">GitHub</a></li>
 						</ul>
 					</nav>
 			</header>
