rodapé criado + Emmet

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 						</ul>
 					</nav>
 			</header>
+
+			<section class="conteudo-principal">
+
+			</section>
+
+			<footer class="rodape">
+				<nav>
+					<ul>
+						<li><a href="#">Item - 1</a></li>
+						<li><a href="#">Item - 2</a></li>
+						<li><a href="#">Item - 3</a></li>
+					</ul>
+				</nav>
+			</footer>
 		</div>
 
 	</body>
