--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -1,83 +1,103 @@
 <!-- Esté é um Comentário em HTML. -->
 <!DOCTYPE HTML> <!-- Esté e o DTD do HTML5. -->
 
-<html lang="pt-br"> 
-	<!-- Primeiro Filho do HTML = HEAD. -->
-	<head>
-		<!-- Os Filhos do head são em sua maoria tags de metadados. EX: meta.  -->
-		<meta charset="UTF-8"/>
-		<meta name="viewport" content="width:device-width,initial-scale=1.0"/>
-		
-		<title>Página Básica</title>
-		<link rel="stylesheet" href="main.css">
-	</head>
-	<!--segundo filho do html -->
-	<body>
-		
-		<div class="conteiner">
-			<header class="cabecalho">
-				<h1>Minha Página</h1>	
-				<nav>
-					<ul>
-						<li><a href="#">Help - 1</a></li>
-						<li><a href="#">Contact - 2</a></li>
-						<li><a href="#">About - 3</a></li>
-					</ul>
-				</nav>
-			</header>
+<html lang="pt-br">
+<!-- Primeiro Filho do HTML = HEAD. -->
 
-			<section id="conteudo-principal">
-				<div>
-					<h2>Help</h2>
-					<p>
-						Help - Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nesciunt adipisci neque libero corporis dolorum architecto officia in provident animi! Vero, consectetur quos! Porro nostrum aspernatur debitis ad minima aut dolorum ex voluptas iste eveniet in soluta saepe, nesciunt, autem voluptates deleniti error quas sequi corporis officiis illo. Dolor non porro ex doloremque totam sapiente, laborum reprehenderit nostrum, facere, similique officiis eaque quisquam voluptatem reiciendis quo nihil minus modi aperiam iusto ratione tempore! Dolorem natus ipsum iusto ratione soluta tempore odio dolorum accusamus magnam? Est in excepturi sint molestiae minus perspiciatis laudantium earum ipsa illum dicta quae eligendi, omnis ex!
-					</p>
-					<a href="#">Mais...</a>
-				</div>
-				<div>
-					<h2>About</h2>
-					<p>
-						About - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quod alias velit nemo facilis quis? Incidunt, maxime! Reiciendis sequi, placeat quis consequatur laboriosam, aliquam sunt corrupti quisquam, eum illo perferendis voluptate molestias maxime ea commodi ipsa cumque error esse! Consequuntur voluptas quas velit eaque aspernatur, alias saepe maxime quod. Similique at dolores neque! Itaque enim nulla sunt consequatur consequuntur illum obcaecati fugit esse id, perspiciatis beatae suscipit quasi fugiat necessitatibus. Perspiciatis porro eum praesentium quod temporibus, ipsa magni ad eaque tempora, minima dolore quia doloremque rem debitis voluptatem mollitia. Atque vel nulla delectus modi exercitationem aspernatur nemo, quidem voluptates facilis.
-					</p>
-					<a href="#">Mais...</a>
-				</div>
-				<div id="contact">
-					<h2>Contact</h2>
-					<form>
-						<fieldset>
-							<legend>Costuomer Contact</legend>
-							<div>
-								<label for="idNm">Name</label>
-								<input type="text" 
-										name="txtNm" 
-										id="idNm" 
-										placeholder="Type your name...">
-							</div>
-							<div>
-								<label for="idEmail">Email</label>
-								<input type="text" 
-										name="txtEmail" 
-										id="idEmail" 
-										placeholder="Type your Email...">
-							</div>
-							<div>
-								<button type="button">Send</button>
-							</div>
-						</fieldset>
-					</form>
-				</div>
-			</section>
+<head>
+	<!-- Os Filhos do head são em sua maoria tags de metadados. EX: meta.  -->
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width:device-width,initial-scale=1.0" />
 
-			<footer class="rodape">
-				<nav>
-					<ul class="links">
-						<li><a href="https://www.fiap.com.br/" target="_blank">fiap</a></li>
-						<li><a href="https://google.com" target="_blank">Google</a></li>
-						<li><a href="https://github.com/RichardyBS" target="_blank">GitHub</a></li>
-					</ul>
-				</nav>
-			</footer>
-		</div>
+	<title>Página Básica</title>
+	<link rel="stylesheet" href="main.css">
+</head>
+<!--segundo filho do html -->
 
-	</body>
+<body>
+
+	<div class="conteiner">
+		<header class="cabecalho">
+			<h1
+				style="text-align: center; color: white; 
+						background-color: rgb(9, 5, 5);padding: 10px 0;
+						box-shadow:  4px 3px 5px #ff0000; 
+						border-radius: 5px; 
+						font-size: 64px;
+						"
+					>
+						Minha Página
+			</h1>
+			<nav>
+				<ul>
+					<li><a href="#">Help - 1</a></li>
+					<li><a href="#">Contact - 2</a></li>
+					<li><a href="#">About - 3</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<section id="conteudo-principal">
+			<div>
+				<h2>Help</h2>
+				<p>
+					Help - Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nesciunt adipisci neque libero
+					corporis dolorum architecto officia in provident animi! Vero, consectetur quos! Porro nostrum
+					aspernatur debitis ad minima aut dolorum ex voluptas iste eveniet in soluta saepe, nesciunt, autem
+					voluptates deleniti error quas sequi corporis officiis illo. Dolor non porro ex doloremque totam
+					sapiente, laborum reprehenderit nostrum, facere, similique officiis eaque quisquam voluptatem
+					reiciendis quo nihil minus modi aperiam iusto ratione tempore! Dolorem natus ipsum iusto ratione
+					soluta tempore odio dolorum accusamus magnam? Est in excepturi sint molestiae minus perspiciatis
+					laudantium earum ipsa illum dicta quae eligendi, omnis ex!
+				</p>
+				<a href="#">Mais...</a>
+			</div>
+			<div>
+				<h2>About</h2>
+				<p>
+					About - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quod alias velit nemo
+					facilis quis? Incidunt, maxime! Reiciendis sequi, placeat quis consequatur laboriosam, aliquam sunt
+					corrupti quisquam, eum illo perferendis voluptate molestias maxime ea commodi ipsa cumque error
+					esse! Consequuntur voluptas quas velit eaque aspernatur, alias saepe maxime quod. Similique at
+					dolores neque! Itaque enim nulla sunt consequatur consequuntur illum obcaecati fugit esse id,
+					perspiciatis beatae suscipit quasi fugiat necessitatibus. Perspiciatis porro eum praesentium quod
+					temporibus, ipsa magni ad eaque tempora, minima dolore quia doloremque rem debitis voluptatem
+					mollitia. Atque vel nulla delectus modi exercitationem aspernatur nemo, quidem voluptates facilis.
+				</p>
+				<a href="#">Mais...</a>
+			</div>
+			<div id="contact">
+				<h2>Contact</h2>
+				<form>
+					<fieldset>
+						<legend>Costuomer Contact</legend>
+						<div>
+							<label for="idNm">Name</label>
+							<input type="text" name="txtNm" id="idNm" placeholder="Type your name...">
+						</div>
+						<div>
+							<label for="idEmail">Email</label>
+							<input type="text" name="txtEmail" id="idEmail" placeholder="Type your Email...">
+						</div>
+						<div>
+							<button type="button">Send</button>
+						</div>
+					</fieldset>
+				</form>
+			</div>
+		</section>
+
+		<footer class="rodape">
+			<nav>
+				<ul class="links">
+					<li><a href="https://www.fiap.com.br/" target="_blank">fiap</a></li>
+					<li><a href="https://google.com" target="_blank">Google</a></li>
+					<li><a href="https://github.com/RichardyBS" target="_blank">GitHub</a></li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
+
+</body>
+
 </html>
