Navegação relativa e interna com âncora.

--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -30,9 +30,9 @@
 			</h1>
 			<nav>
 				<ul>
-					<li><a href="#">Help - 1</a></li>
-					<li><a href="#">Contact - 2</a></li>
-					<li><a href="#">About - 3</a></li>
+					<li><a href="./paginas/help.html">Help </a></li>
+					<li><a href="./paginas/about.html">About </a></li>
+					<li><a href="#contact">Contact </a></li>
 				</ul>
 			</nav>
 		</header>
@@ -48,7 +48,7 @@
 					sapiente, laborum reprehenderit nostrum, facere, similique officiis eaque quisquam voluptatem
 					reiciendis quo nihil minus modi aperiam iusto ratione tempore! Dolorem natus ipsum iusto ratione
 					soluta tempore odio dolorum accusamus magnam? Est in excepturi sint molestiae minus perspiciatis
-					laudantium earum ipsa illum dicta quae eligendi, omnis ex!
+					laudantium earum ipsa illum dicta quae eligendi, omnis ex! Lorem ipsum dolor, sit amet consectetur.
 				</p>
 				<a href="#">Mais...</a>
 			</div>
