--- a/meu-projeto/paginas/about.html
+++ b/meu-projeto/paginas/about.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT</title>
 </head>
+
 <body>
-    <h1>ABOUT</h1>
+    <div class="conteiner">
+        <header class="cabecalho">
+            <h1 style="text-align: center; color: white; 
+						background-color: rgb(9, 5, 5);padding: 10px 0;
+						box-shadow:  4px 3px 5px #ff0000; 
+						border-radius: 5px; 
+						font-size: 64px;
+						">
+                ABOUT
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="./help.html">Help </a></li>
+                    <li><a href="../index.html">Home </a></li>
+                    <li><a href="../index.html#contact">Contact </a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 </body>
+
 </html>
