--- a/meu-projeto/paginas/help.html
+++ b/meu-projeto/paginas/help.html
@@ -6,6 +6,26 @@
     <title>HELP</title>
 </head>
 <body>
-    <h1>HELP</h1>
+    <div class="conteiner">
+		<header class="cabecalho">
+			<h1
+				style="text-align: center; color: white; 
+						background-color: rgb(9, 5, 5);padding: 10px 0;
+						box-shadow:  4px 3px 5px #ff0000; 
+						border-radius: 5px; 
+						font-size: 64px;
+						"
+					>
+					HELP
+			</h1>
+			<nav>
+				<ul>
+					<li><a href="../index.html">Home </a></li>
+					<li><a href="./about.html">About </a></li>
+					<li><a href="../index.html#contact">Contact </a></li>
+				</ul>
+			</nav>
+		</header>
+        </div>
 </body>
 </html>
