Adicionando imagem na pagina help

--- a/meu-projeto/index.html
+++ b/meu-projeto/index.html
@@ -50,7 +50,7 @@
 					soluta tempore odio dolorum accusamus magnam? Est in excepturi sint molestiae minus perspiciatis
 					laudantium earum ipsa illum dicta quae eligendi, omnis ex! Lorem ipsum dolor, sit amet consectetur.
 				</p>
-				<a href="#">Mais...</a>
+				<a href="./paginas/help.html">Mais...</a>
 			</div>
 			<div>
 				<h2>About</h2>
@@ -64,7 +64,7 @@
 					temporibus, ipsa magni ad eaque tempora, minima dolore quia doloremque rem debitis voluptatem
 					mollitia. Atque vel nulla delectus modi exercitationem aspernatur nemo, quidem voluptates facilis.
 				</p>
-				<a href="#">Mais...</a>
+				<a href="./paginas/about.html">Mais...</a>
 			</div>
 			<div id="contact">
 				<h2>Contact</h2>
