--- a/meu-projeto/paginas/help.html
+++ b/meu-projeto/paginas/help.html
@@ -26,6 +26,14 @@
 				</ul>
 			</nav>
 		</header>
-        </div>
+
+        <section class="conteudo-help">
+            <figure>
+                <img src="../IMG/help-2478193_1280.jpg" alt="Mão com texto help.">
+                <figcaption>Toda Ajuda é Bem Vinda</figcaption>
+            </figure>
+        </section>
+        
+    </div>
 </body>
 </html>
