--- a/meu-projeto/paginas/about.html
+++ b/meu-projeto/paginas/about.html
@@ -2,31 +2,37 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ABOUT</title>
+  <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
-    <div class="conteiner">
-        <header class="cabecalho">
-            <h1 style="text-align: center; color: white; 
-						background-color: rgb(9, 5, 5);padding: 10px 0;
-						box-shadow:  4px 3px 5px #ff0000; 
-						border-radius: 5px; 
-						font-size: 64px;
-						">
-                ABOUT
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="./help.html">Help </a></li>
-                    <li><a href="../index.html">Home </a></li>
-                    <li><a href="../index.html#contact">Contact </a></li>
-                </ul>
-            </nav>
-        </header>
-    </div>
+  <div class="container">
+    <header id="cabecalho">
+      <h1>About</h1>
+
+      <nav id="menu">
+        <ul>
+          <li class="link">
+            <a href="./paginas/help.html">
+              <img src="../img/help.png" alt="Caixa de texto com uma Interrogação." />
+            </a>
+          </li>
+          <li class="link">
+            <a href="../index.html">
+              <img src="../img/home.png" alt="simbulo de casa dentro de um circulo" />
+            </a>
+          </li>
+          <li class="link">
+            <a href="#contact"> <img src="../img/contact.png" alt="Envelope de carta." /> </a>
+          </li>
+        </ul>
+      </nav>
+
+    </header>
+  </div>
 </body>
 
 </html>
