ajuste header 3 pag

--- a/meu-projeto/paginas/help.html
+++ b/meu-projeto/paginas/help.html
@@ -26,40 +26,13 @@
             </a>
           </li>
           <li class="link">
-            <a href="#contact"> <img src="../img/contact.png" alt="Envelope de carta." /> </a>
+            <a href="../index.html#contact"> <img src="../img/contact.png" alt="Envelope de carta." /> </a>
           </li>
         </ul>
       </nav>
 
     </header>
 
-    <section class="conteudo">
-      <figure>
-        <img src="../img/helpimg.jpg" alt="Mão com texto help." />
-        <figcaption>Toda ajuda é bem vinda!</figcaption>
-      </figure>
-    </section>
-    <section>
-      <div id="contact">
-        <h2>CONTACT</h2>
-        <form>
-          <fieldset>
-            <legend>Customer Contact</legend>
-            <div>
-              <label for="idNm">Name</label>
-              <input type="text" name="txtNm" id="idNm" placeholder="Type your name..." />
-            </div>
-            <div>
-              <label for="idEmail">Email</label>
-              <input type="email" name="txtEmail" id="idEmail" placeholder="Type your email..." />
-            </div>
-            <div>
-              <button type="button">Send</button>
-            </div>
-          </fieldset>
-        </form>
-      </div>
-    </section>
   </div>
 </body>
 
