--- a/meu-projeto/paginas/about.html
+++ b/meu-projeto/paginas/about.html
@@ -16,7 +16,7 @@
       <nav id="menu">
         <ul>
           <li class="link">
-            <a href="./paginas/help.html">
+            <a href="help.html">
               <img src="../img/help.png" alt="Caixa de texto com uma Interrogação." />
             </a>
           </li>
@@ -26,7 +26,7 @@
             </a>
           </li>
           <li class="link">
-            <a href="#contact"> <img src="../img/contact.png" alt="Envelope de carta." /> </a>
+            <a href="../index.html#contact"> <img src="../img/contact.png" alt="Envelope de carta." /> </a>
           </li>
         </ul>
       </nav>
